--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,7 +15,7 @@
     <description>
         <![CDATA[
       Install now and navigate lines 5 times faster! search for 'MoveFaster' in Settings/Keymaps and register your
-      keybindings and you are good to go! (ALT+UP, ALT+DOWN Default)
+      keybindings and you are good to go! (ALT+UP, ALT+DOWN Default) source code can be found at: https://github.com/Kooni-Boop/MoveFast-Jetbrains-IDE-Plugin
     ]]>
     </description>
     <change-notes>
@@ -49,8 +49,8 @@
             <add-to-group group-id="EditorActions" anchor="last"/>
             <keyboard-shortcut keymap="$default" first-keystroke="alt UP"/>
         </action>
-        <action id="MoveFasterActionDown" class="org.kooni_boop.movefaster.MoveFasterActionDown"
-                text="MoveFasterActionDown" description="Move cursor down by defined in MoveFaster settings.">
+        <action id="MoveFasterDown" class="org.kooni_boop.movefaster.MoveFasterActionDown"
+                text="MoveFasterDown" description="Move cursor down by defined in MoveFaster settings.">
             <add-to-group group-id="EditorActions" anchor="last"/>
             <keyboard-shortcut keymap="$default" first-keystroke="alt DOWN"/>
         </action>
