--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 group 'org.kooni_boop.movefast'
-version '0.3'
+version '0.4'
 
 sourceCompatibility = 1.8
 
@@ -27,7 +27,7 @@ repositories {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version = '2020.2.4'
+    version = '211.6693.111'
 }
 
 buildSearchableOptions {
@@ -50,5 +50,5 @@ dependencies {
 patchPluginXml {
     version = project.version
     sinceBuild = '202'
-    untilBuild = '203.*'
+//    untilBuild = '250'
 }
